--- a/week_1/ex5/CMakeLists.txt
+++ b/week_1/ex5/CMakeLists.txt
@@ -8,5 +8,6 @@ set(SOURCE_FILES main.cc main.ih matrix/destructor.cc matrix/identity.cc matrix/
         matrix/matrix4.cc matrix/operatorassign1.cc matrix/operatorassign2.cc
         matrix/swap.cc matrix/tr.cc matrix/transpose.cc matrix/transpose2.cc
         matrix/add.cc matrix/operatoradd.cc matrix/operatoradd2.cc
-        matrix/operatorcompadd1.cc matrix/operatorcompadd2.cc)
+        matrix/operatorcompadd1.cc matrix/operatorcompadd2.cc
+        matrix/operatorinsert.cc)
 add_executable(ex5 ${SOURCE_FILES})
