--- a/week_1/ex5/CMakeLists.txt
+++ b/week_1/ex5/CMakeLists.txt
@@ -9,5 +9,6 @@ set(SOURCE_FILES main.cc main.ih matrix/destructor.cc matrix/identity.cc matrix/
         matrix/swap.cc matrix/tr.cc matrix/transpose.cc matrix/transpose2.cc
         matrix/add.cc matrix/operatoradd.cc matrix/operatoradd2.cc
         matrix/operatorcompadd1.cc matrix/operatorcompadd2.cc
-        matrix/operatorinsert.cc)
+        matrix/operatorinsert.cc matrix/operatorextract.cc matrix/functor.cc
+        matrix/extractrows.cc matrix/extractcols.cc)
 add_executable(ex5 ${SOURCE_FILES})
