--- a/week_1/ex7/CMakeLists.txt
+++ b/week_1/ex7/CMakeLists.txt
@@ -11,5 +11,5 @@ set(SOURCE_FILES main.cc main.ih matrix/destructor.cc matrix/identity.cc matrix/
         matrix/operatorcompadd1.cc matrix/operatorcompadd2.cc
         matrix/operatorinsert.cc matrix/operatorextract.cc matrix/functor1.cc
         matrix/extractrows.cc matrix/extractcols.cc matrix/functor2.cc
-        matrix/functor3.cc)
+        matrix/functor3.cc matrix/operatorequalto.cc matrix/operatornotequalto.cc)
 add_executable(ex5 ${SOURCE_FILES})
