--- a/week_2/ex12/CMakeLists.txt
+++ b/week_2/ex12/CMakeLists.txt
@@ -3,6 +3,6 @@ project(ex12)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cc maxfour/maxfour.cc maxfour/maxfour.h maxfour/maxfour.ih
-        maxfour/destructor.cc main.ih)
+set(SOURCE_FILES main.cc maxfour/maxfour.cc maxfour/destructor.cc
+        maxfour/maxfour.ih main.ih)
 add_executable(ex12 ${SOURCE_FILES})
