--- a/week_2/ex12/CMakeLists.txt
+++ b/week_2/ex12/CMakeLists.txt
@@ -4,5 +4,5 @@ project(ex12)
 set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES main.cc maxfour/maxfour.cc maxfour/destructor.cc
-        maxfour/maxfour.ih main.ih)
+        maxfour/maxfour.ih main.ih maxfour/data.cc)
 add_executable(ex12 ${SOURCE_FILES})
