17: Auto stash before merge of "ex17" and "origin/ex17"

--- a/week_2/ex17/CMakeLists.txt
+++ b/week_2/ex17/CMakeLists.txt
@@ -3,9 +3,10 @@ project(ex17)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cc main.ih test.cc showexcepts/asathrowlist.cc showexcepts/asNoexcept.cc
-        showexcepts/NoEx.cc showexcepts/showexcepts.h showexcepts/showexcepts.ih
-        showexcepts/throwlist.cc showexcepts/showexcepts1.cc)
+set(SOURCE_FILES main.cc main.ih test.cc showexcepts/asathrowlist.cc
+        showexcepts/showexcepts.h showexcepts/showexcepts.ih
+        showexcepts/showexcepts1.cc showexcepts/asathrowlist.cc
+        showexcepts/asNoexcept.cc)
 
 add_executable(ex17 ${SOURCE_FILES})
 
