--- a/week_2/ex13/CMakeLists.txt
+++ b/week_2/ex13/CMakeLists.txt
@@ -3,7 +3,7 @@ project(ex13)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cc main.ih matrix/destructor.cc matrix/at.cc
+set(SOURCE_FILES main1.cc main.ih matrix/destructor.cc matrix/at.cc
         matrix/identity.cc matrix/matrix.h show.cc
         matrix/matrix.ih matrix/matrix1.cc matrix/matrix2.cc matrix/matrix3.cc
         matrix/matrix4.cc matrix/operatorassign1.cc matrix/operatorassign2.cc
