ex25 ex26 finished

--- a/week_4/ex25/CMakeLists.txt
+++ b/week_4/ex25/CMakeLists.txt
@@ -5,5 +5,5 @@ set(CMAKE_CXX_STANDARD 17)
 
 set(SOURCE_FILES main.cc bistreambuffer/bistreambuffer.h bistreambuffer/bistreambuffer.ih
         bistreambuffer/bistreambuffer1.cc bistream/bistream.h bistream/bistream.ih
-        bistream/bistream1.cc bistream/operatorinsert.cc bistreambuffer/overflow.cc)
+        bistream/bistream1.cc bistreambuffer/overflow.cc)
 add_executable(ex25 ${SOURCE_FILES})
